--- a/src/Login/index.css
+++ b/src/Login/index.css
@@ -1,25 +1,29 @@
 form{
     width: 60%;
     border: solid 1px;
-    margin-left: 20px;
+    margin-left: 370px;
     margin-top: 20px;
     padding: 20px;
+    border-radius: 10px;
+
 }
 input{
     width: 90%;
-    margin: 2% 0;
+    margin: 2% 3%;
     padding: 10px 12px;
 
 }
 button{
     padding: 16px 10px;
     width: 1040px;
-    background-color: rgb(15, 15, 44);
+    background-color: rgb(15, 45, 85);
     color: aliceblue;
     border-radius: 5%;
     cursor: pointer;
     border: none;
     margin-bottom: 10px;
+    margin: 2% 3%;
+
 }
 h1{
     text-align: center;
